# dali-validation-layer

./: CMakeLists-tizen.txt  CMakeLists.txt  README.md
explicit_layer.d/: VkLayer_dali.json
src/: library.cpp  library.h  resources.cpp
